--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>
         {% block title %}
+            Index page
         {% endblock %}
     </title>
 </head>
@@ -40,13 +41,16 @@
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
-    <div  class="container">
+    
+</nav>                              
+   <div  class="container">
         <div class="row">
 
-        {% block content %}
-        {% endblock %}
-        </div>
+        <div class="col-8 mx-auto ">{% block content %}
+
+            {% endblock %}</div>
+
+    </div>
    </div>
-</nav>                              
 </body>
 </html>
