--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     </title>
 </head>
 <body>
-    <h1> Blog it!</h1>
+    <h1> Blog it now!</h1>
     <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
